Thu Jul 24 04:56:48 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/T2M/T2M.mpc:

          . Change the name of the project file, and the name of the
            target executable.

        * MDE/GME/T2M/Text2Model.mpc:

          Removed this file.

Thu Jul 24 04:50:27 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * MDE/GME/T2M/parsers/Scatter_Deployment:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Deployment_Map.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_Manager.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_Manager.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_T.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Model_Cache_T.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.mpc:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser.cpp:
        * MDE/GME/T2M/parsers/Scatter_Deployment/Scatter_Deployment_Parser_export.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/stdafx.h:
        * MDE/GME/T2M/parsers/Scatter_Deployment/stdafx.cpp:

          . Text-2-model parser for convert Scatter deployments into a PICML
            deployment plan.

Thu Jul 24 04:42:28 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>

        * etc/config/gme_t2m.mpb:
        * MDE/GME/T2M/parsers:
        * MDE/GME/T2M/parsers/T2M_Parser.h:
        * MDE/GME/T2M/parsers/T2M_Parser.inl:
        * MDE/GME/T2M/parsers/T2M_Parser.cpp:
        * MDE/GME/T2M/parsers/T2M_Parser.mpc:
        * MDE/GME/T2M/parsers/T2M_Parser_export.h:

          . Initial architecture for creating text-2-model parsers for
            GME.

        * MDE/GME/naomi/GNC.mpc:
        * MDE/GME/naomi/GNC_App.h:
        * MDE/GME/naomi/GNC_App.cpp: