@@ -1,3 +1,14 @@
+Thu Jul 24 15:10:38 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
+
+        * MDE/GME/naomi/GNC.cpp:
+        * MDE/GME/naomi/GNC_App.h:
+        * MDE/GME/naomi/GNC_App.cpp:
+
+          . Bug fix where the temporary file created for the .xme was
+            not deleted when the program exited.
+
+          . Updated the log messages to use ACE_Log_Msg correctly. ;-)
+
 Thu Jul 24 04:56:48 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * MDE/GME/T2M/T2M.mpc:
